--- a/vault_ansible/hashi-corp-vault/vars/main.yml
+++ b/vault_ansible/hashi-corp-vault/vars/main.yml
@@ -12,8 +12,8 @@
  vault_install_prerequisites: 
                           -  "unzip"
                       
- kms: "e35e898d-4ffc-40a1-9d49-ab6c71827e52"  
- kms_region: "us-west-1"   
+ kms: "d9d61d5c-e93b-4d9c-a885-714aca358d2b"  
+ kms_region: "us-east-2"   
  unseal_keys_dir_output: "/opt/unseal"
  root_token_dir_output: "/opt/unseal"  
  unseal_keys_dir_output_file_key-shares: "/opt/unseal/token.txt"  
